--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "layout/father.html" %}
-{% block title %}I tuoi DDT{% endblock %}
+{% block title %}Menu principale{% endblock %}
 
 {% block bar %}
 <a href=" {{ url_for('newddt') }} " class="button is-pulled-right is-primary">Compila un nuovo DDT</a>
@@ -8,27 +8,27 @@
 {% block content %}
 {% if login %}
 
-  {% for ddt in ddtlist %}
-  <div class="box">
-    <div class="columns is-flex is-vcentered">
-      <div class="column">
-        <p><strong>Numero DDT:</strong> {{ddt['CEDTDDTNR']}}</p>
-        <p><strong>Data certificazione:</strong> {{ddt['CEDTCEDT']}}</p> 
-        <p><strong>Data DDT: </strong>{{ddt['CEDTDDTDT']}}</p> 
-      </div>
-      <div class="column has-text-centered">
-        <div class="columns">
-          <div class="column">
-            <a class="button is-primary is-fullwidth" href="{{url_for('ddt', ddtnum=ddt['CEDTID'])}}">Modifica</a>
-          </div>
-          <div class="column">
-            <a class="button is-danger is-fullwidth" href="{{url_for('removeddt', ddtnum = ddt['CEDTID'])}}">Elimina</a>
-          </div>
+{% for ddt in ddtlist %}
+<div class="box">
+  <div class="columns is-flex is-vcentered">
+    <div class="column">
+      <p><strong>Numero DDT:</strong> {{ddt['CEDTDDTNR']}}</p>
+      <p><strong>Data certificazione:</strong> {{ddt['CEDTCEDT']}}</p>
+      <p><strong>Data DDT: </strong>{{ddt['CEDTDDTDT']}}</p>
+    </div>
+    <div class="column has-text-centered">
+      <div class="columns">
+        <div class="column">
+          <a class="button is-primary is-fullwidth" href="{{url_for('ddt', ddtnum=ddt['CEDTID'])}}">Modifica</a>
+        </div>
+        <div class="column">
+          <a class="button is-danger is-fullwidth" href="{{url_for('removeddt', ddtnum = ddt['CEDTID'])}}">Elimina</a>
         </div>
       </div>
     </div>
   </div>
-  {% endfor %}
+</div>
+{% endfor %}
 
-{% endif %} 
+{% endif %}
 {% endblock %}
